# FairyGUI-MCP

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TODO.md  claude_settings_example.json  install.bat  pyproject.toml
plugin/MCPBridge/: main.lua  package.json
plugin/MCPBridge/src/: command_handler.lua
src/mcp_fairygui/: __init__.py  server.py
src/mcp_fairygui/bridge/: __init__.py  command_queue.py
src/mcp_fairygui/parsers/: __init__.py  description_gen.py  xml_parser.py
src/mcp_fairygui/tools/: __init__.py  component_tools.py  editor_tools.py  file_tools.py  package_tools.py
src/mcp_fairygui/utils/: window_manager.py
